[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Historial.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escenas/BarraPalabraActual.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 34, 591, 0, 0, 0, 0, 36, 217, 0, 0, 0, 0, 26, 74, 0, 0, 0, 0, 23, 13, 0, 0, 0, 0, 1015, 10 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Barra" parent="." instance=ExtResource( 8 )]
position = Vector2( 574, 635 )
__meta__ = {
"_edit_group_": true
}

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 34, 591 )
rotation = -1.56545

[node name="finFaseEsbirros" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="tiempoDeRetirada" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1152, 620 )
__meta__ = {
"_edit_group_": true
}

[node name="Historial" parent="." instance=ExtResource( 3 )]
position = Vector2( 230, 663 )
__meta__ = {
"_edit_group_": true
}

[connection signal="timeout" from="finFaseEsbirros" to="." method="_on_finFaseEsbirros_timeout"]
[connection signal="timeout" from="tiempoDeRetirada" to="." method="_on_tiempoDeRetirada_timeout"]
[connection signal="disparoEspecial" from="Player" to="Barra" method="_on_Player_disparoEspecial"]
[connection signal="sueltaPieza" from="Player" to="Barra" method="_on_Player_sueltaPieza"]
